--- a/gestao/templates/admin_custom/contas_form.html
+++ b/gestao/templates/admin_custom/contas_form.html
@@ -1,8 +1,27 @@
-{% extends 'admin_custom/base_admin.html' %}
-{% block content %}
-<h2>Nova Conta Fidelidade</h2>
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Salvar</button>
-</form>
+{% extends "admin_custom/base_admin.html" %}
+{% load static %}
+{% block title %}{% if form.instance.pk %}Editar Conta Fidelidade{% else %}Nova Conta Fidelidade{% endif %}{% endblock %}
+{% block header_title %}{% if form.instance.pk %}Editar Conta Fidelidade{% else %}Nova Conta Fidelidade{% endif %}{% endblock %}
+{% block menu_contas %}bg-zinc-700 text-white{% endblock %}
+{% block extra_head %}
+<link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
 {% endblock %}
+{% block content %}
+<div class="form-wrapper">
+<form method="post">
+    {% csrf_token %}
+    <div class="form-title">{% if form.instance.pk %}Editar Conta Fidelidade{% else %}Nova Conta Fidelidade{% endif %}</div>
+    {% for field in form %}
+    <div class="form-group single">
+        <label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
+        {{ field }}
+        {% if field.errors %}<div class="text-red-400 text-sm mt-1">{{ field.errors }}</div>{% endif %}
+    </div>
+    {% endfor %}
+    <div class="form-actions">
+        <button type="submit" class="btn-primary">Salvar</button>
+    </div>
+</form>
+</div>
+{% endblock %}
+
